--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="display">
   @for (report of reports; track $index) { @if(report.active == true){
-  <div class="card" style="width: 18rem">
+  <div class="card align-items-center" style="width: 18rem">
     <div class="card-body">
       <div class="m-2">
         <h5 class="card-title">{{ report.itemName | uppercase }}</h5>
