--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,53 +1,88 @@
-<div
-  class="container d-flex flex-column justify-content-center align-items-center"
->
+<div class="container">
   <div class="title-box">
     <h1>EMPLOYEE MANAGEMENT</h1>
   </div>
+  <div class="d-flex justify-content-end gap-2 mt-4">
+    <input class="searchBox" (keyup)="filterChange($event)" type="text" />
+    <button class="btn btn-success" (click)="addEmployee()">
+      NEW EMPLOYEE
+    </button>
+  </div>
 
-  <!-- <a class="btn btn-primary btn-nueva"><b>+</b> Add Shelf </a> -->
-  <button class="btn btn-primary mb-3" (click)="addEmployee()">
-    Add Employee +
-  </button>
-  <table class="table table-bordered table-hover">
-    <thead>
-      <tr>
-        <th>Email</th>
-        <th>Name</th>
-        <th>Last Name</th>
-        <th>Role</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      @for (user of users; track $index){
-      <tr>
-        <td>{{ user.email }}</td>
-        <td>{{ user.name }}</td>
-        <td>{{ user.lastName }}</td>
-        <td>{{ user.roleName }}</td>
-        <td>
-          <div class="d-flex justify-content-center">
-            <span
-              class="icon edit material-symbols-outlined me-3"
-              (click)="updateEmployee(user.email)"
-              >edit</span
-            >
-            <span
-              class="icon delete material-symbols-outlined"
-              (click)="delete(user.email)"
-            >
-              person_remove
-            </span>
-            <!-- <span
-              class="icon delete material-symbols-outlined"
-              
-              >delete</span
-            > -->
-          </div>
-        </td>
-      </tr>
-      }
-    </tbody>
+  <table class="mt-4" matSort mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="email">
+      <th
+        class="fw-bolder fs-5"
+        mat-sort-header
+        mat-header-cell
+        *matHeaderCellDef
+      >
+        Email
+      </th>
+      <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th
+        class="fw-bolder fs-5"
+        mat-sort-header
+        mat-header-cell
+        *matHeaderCellDef
+      >
+        Name
+      </th>
+      <td mat-cell *matCellDef="let user">{{ user.name | titlecase }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+      <th
+        class="fw-bolder fs-5"
+        mat-sort-header
+        mat-header-cell
+        *matHeaderCellDef
+      >
+        Last Name
+      </th>
+      <td mat-cell *matCellDef="let user">{{ user.lastName | titlecase }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="roleName">
+      <th
+        class="fw-bolder fs-5"
+        mat-sort-header
+        mat-header-cell
+        *matHeaderCellDef
+      >
+        Role
+      </th>
+      <td mat-cell *matCellDef="let user">{{ user.roleName }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th class="fw-bolder fs-5" mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let user">
+        <div>
+          <span
+            class="icon edit material-symbols-outlined me-3"
+            (click)="updateEmployee(user.email)"
+            >edit</span
+          >
+          <span
+            class="icon delete material-symbols-outlined"
+            (click)="delete(user.email)"
+          >
+            person_remove
+          </span>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <mat-paginator
+    showFirstLastButtons
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20]"
+  ></mat-paginator>
 </div>
