--- a/src/app/shared/component/add-user/add-user.component.html
+++ b/src/app/shared/component/add-user/add-user.component.html
@@ -1,38 +1,54 @@
-<div
-  class="d-flex justify-content-center align-items-center flex-column mx-4 my-4"
->
+<div class="mx-4 my-4">
   <form [formGroup]="userForm">
-    <label for="name">Name : </label>
-    <input
-      class="mt-2"
-      type="text"
-      name="name"
-      formControlName="name"
-      id="name"
-    />
-    <label for="lastName">Lastname : </label>
-    <input
-      class="mt-2"
-      type="text"
-      name="lastName"
-      formControlName="lastName"
-      id="lastName"
-    />
-    <label for="email">Email : </label>
-    <input
-      class="mt-2"
-      type="text"
-      name="email"
-      formControlName="email"
-      id="email"
-    />
-    <label for="role">Role : </label>
-    <select class="custom-select" name="role" formControlName="role" id="role">
-      <option [ngValue]="1">admin</option>
-      <option [ngValue]="2">depo_sorumlusu</option>
-      <option [ngValue]="3">rapor_kullanıcısı</option>
-    </select>
-  </form>
+    <div class="mb-3">
+      <label for="name" class="form-label">Name : </label>
+      <input
+        class="mt-2 form-control"
+        type="text"
+        name="name"
+        formControlName="name"
+        id="name"
+        required
+      />
+    </div>
 
-  <button class="btn btn-primary mt-2" (click)="addUser()">Add Employee</button>
+    <div class="mb-3">
+      <label for="lastName" class="form-label">Lastname : </label>
+      <input
+        class="mt-2 form-control"
+        type="text"
+        name="lastName"
+        formControlName="lastName"
+        id="lastName"
+        required
+      />
+    </div>
+
+    <div>
+      <label for="email" class="form-label">Email : </label>
+      <input
+        class="mt-2 form-control"
+        type="text"
+        name="email"
+        formControlName="email"
+        id="email"
+        required
+      />
+    </div>
+
+    <div>
+      <label for="role" class="form-label">Role : </label>
+      <select class="form-select" name="role" formControlName="role" id="role">
+        <option [ngValue]="1">admin</option>
+        <option [ngValue]="2">depo_sorumlusu</option>
+        <option [ngValue]="3">rapor_kullanıcısı</option>
+      </select>
+    </div>
+
+    <div class="d-grid">
+      <button class="btn btn-success mt-4" (click)="addUser()">
+        Add Employee
+      </button>
+    </div>
+  </form>
 </div>
