--- a/src/app/modules/shelf/shelf/shelf.component.html
+++ b/src/app/modules/shelf/shelf/shelf.component.html
@@ -13,15 +13,21 @@
     <button class="btn btn-success" (click)="addShelf()">NEW SHELF</button>
     }
   </div>
-  <table class="mt-4" matSort mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="no">
+  <table
+    class="table table-hover table-striped mt-4"
+    matSort
+    mat-table
+    [dataSource]="dataSource"
+  >
+    <ng-container matColumnDef="no" class="bg-dark">
       <th
         class="fw-bolder fs-5"
         mat-sort-header
         mat-header-cell
         *matHeaderCellDef
+        [ngClass]="{ red: true }"
       >
-        Id
+        No
       </th>
       <td mat-cell *matCellDef="let shelf">{{ shelf.no }}</td>
     </ng-container>
