--- a/src/app/shared/component/success-dialog/success-dialog.component.scss
+++ b/src/app/shared/component/success-dialog/success-dialog.component.scss
@@ -2,13 +2,12 @@
     font-weight: 500;
 }
 
-input{
-    margin-bottom:1rem ;
-    border:1px solid #0d6efd;
-    &:focus{
-        outline: none !important;
-        box-shadow: 0 0 10px #719ECE
+.btn-outline-success{
+    border: 1px solid #1B3856;
+    color:#1B3856;
+    &:hover{
+    color: white;
+    background-color: #1B3856;
     }
-    border-radius: 12px;
-    padding: 0.4rem;
+
 }
