--- a/src/app/modules/profile/profile/profile.component.scss
+++ b/src/app/modules/profile/profile/profile.component.scss
@@ -2,3 +2,15 @@
     user-select: none;
     pointer-events: none;
 }
+
+.w-50{
+    width: 43% !important;
+}
+
+.green{
+color:green;
+}
+
+.red{
+color:red;
+}
