--- a/src/app/shared/component/success-dialog/success-dialog.component.scss
+++ b/src/app/shared/component/success-dialog/success-dialog.component.scss
@@ -2,12 +2,7 @@
     font-weight: 500;
 }
 
-.btn-outline-success{
-    border: 1px solid #1B3856;
-    color:#1B3856;
-    &:hover{
-    color: white;
-    background-color: #1B3856;
-    }
 
+.form-control{
+    margin:0;
 }
