--- a/src/app/modules/item/item/item.component.html
+++ b/src/app/modules/item/item/item.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <table
-    class="table tablo-hover table-striped mt-4"
+    class="table table-hover table-striped mt-4"
     matSort
     mat-table
     [dataSource]="dataSource"
