--- a/src/app/shared/component/item-in-out-dialog/item-in-out-dialog.component.html
+++ b/src/app/shared/component/item-in-out-dialog/item-in-out-dialog.component.html
@@ -1,25 +1,27 @@
-<div class="mx-4 my-4">
-  <div class="mt-2">
-    <label for="quantity" class="form-label"> {{ question }} </label>
-    <input
-      class="form-control"
-      id="quantity"
-      type="number"
-      max="999"
-      min="1"
-      placeholder="1"
-      [(ngModel)]="quantity"
-    />
-  </div>
-  <div class="d-grid">
-    @if (buttonName == 'Add Item') {
-    <button class="btn btn-success mt-2" (click)="itemInOut()">
-      {{ buttonName }}
-    </button>
-    }@else {
-    <button class="btn btn-danger mt-2" (click)="itemInOut()">
-      {{ buttonName }}
-    </button>
-    }
+<div class="dialog">
+  <div class="mx-4 my-4">
+    <div class="mt-2">
+      <label for="quantity" class="form-label"> {{ question }} </label>
+      <input
+        class="form-control"
+        id="quantity"
+        type="number"
+        max="999"
+        min="1"
+        placeholder="1"
+        [(ngModel)]="quantity"
+      />
+    </div>
+    <div class="d-grid">
+      @if (buttonName == 'Add Item') {
+      <button class="btn btn-success mt-2" (click)="itemInOut()">
+        {{ buttonName }}
+      </button>
+      }@else {
+      <button class="btn btn-danger mt-2" (click)="itemInOut()">
+        {{ buttonName }}
+      </button>
+      }
+    </div>
   </div>
 </div>
