--- a/src/app/core/component/menu/menu.component.scss
+++ b/src/app/core/component/menu/menu.component.scss
@@ -14,3 +14,9 @@
   .dropstart .dropdown-toggle::before{
     content: none;
 }
+
+.logout{
+  padding-right: 4px;
+  margin-top: 3px;
+  cursor: pointer;
+}
