--- a/src/app/core/component/menu/menu.component.html
+++ b/src/app/core/component/menu/menu.component.html
@@ -106,6 +106,8 @@ m-238 -5 c0 -23 4 -30 20 -30 16 0 20 7 20 30 0 28 2 30 40 30 l40 0 0 -100 0
 
       <div class="dropdown dropstart">
         <button
+          matTooltip="Profile & Theme"
+          [matTooltipPosition]="'before'"
           class="btn btn-success rounded-circle dropdown-toggle"
           data-toggle="dropdown"
           type="button"
@@ -136,8 +138,11 @@ m-238 -5 c0 -23 4 -30 20 -30 16 0 20 7 20 30 0 28 2 30 40 30 l40 0 0 -100 0
             </div>
           </li>
           <li><hr class="dropdown-divider" /></li>
-          <li class="mt-1">
-            <a class="dropdown-item" (click)="logout()">Logout</a>
+          <li class="mt-1 d-flex" (click)="logout()">
+            <a class="dropdown-item text-danger">Logout</a>
+            <span class="material-symbols-outlined logout text-danger">
+              logout
+            </span>
           </li>
         </ul>
       </div>
