--- a/src/app/modules/report/report/report.component.html
+++ b/src/app/modules/report/report/report.component.html
@@ -7,7 +7,7 @@
       class="searchBox"
       (keyup)="filterChange($event)"
       type="text"
-      placeholder="Search ..."
+      placeholder="Search"
     />
   </div>
 
@@ -83,6 +83,8 @@
       <td mat-cell *matCellDef="let report">
         <div class="form-check form-switch">
           <input
+            matTooltip="Open-Close Report"
+            [matTooltipPosition]="'above'"
             class="form-check-input"
             type="checkbox"
             role="switch"
@@ -93,6 +95,8 @@
 
           @if (report.active == false) {
           <span
+            matTooltip="Delete Report"
+            [matTooltipPosition]="'above'"
             class="icon delete material-symbols-outlined"
             (click)="deleteReport(report.id)"
           >
