--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 $edit-color: #E9C874;
 $delete-color: #A34343;
 $disabled-color :#808080 ;
@@ -7,11 +6,12 @@ $plus-color: #00b436;
 $minus-color: #fc998c;
 $navy-color:#1B3856;
 $input-bg-color:#121212;
-
-////
 $navbar-light: #9EC8B9;
 $navbar-dark:#1B4242;
-////
+$bg-light : #fdf6eb;
+$bg-dark: #212529;
+//////////////////////////
+
 html, body { height: 100%; }
 body { margin: 0; font-family:Poppins, Roboto, "Helvetica Neue", sans-serif; }
 
@@ -20,19 +20,13 @@ body { margin: 0; font-family:Poppins, Roboto, "Helvetica Neue", sans-serif; }
     padding: 0;
   }
 }
+
 @media screen and (max-width: 991px) {
   .navbar-nav {
     padding-top: 0.5em;
   }
 }
 
-input[type=number] {
-  &::-webkit-inner-spin-button,
-  &::-webkit-outer-spin-button {
-    background-color: #ff0000; // Arka plan rengini burada değiştirebilirsiniz
-    // Diğer stillendirme özellikleri
-  }
-}
 .title-box {
     padding: 2rem 1.5rem 0 1.5rem;
     text-align: center;
@@ -106,12 +100,12 @@ input[type=number] {
   }
 
   .mat-mdc-table .mat-mdc-header-cell{
-    background-color: var(--bs-body-bg);
+    background-color: $bg-dark;
     color: white;
   }
 
   .mat-mdc-paginator-container{
-    background-color: var(--bs-body-bg);
+    background-color: $bg-dark;
     color: white;
   }
 
@@ -141,7 +135,7 @@ input[type=number] {
   }
 
   .mat-mdc-select-panel{
-    background-color: var(--bs-body-bg);
+    background-color: $bg-dark;
   }
 
   .mat-mdc-option{
@@ -161,7 +155,7 @@ input[type=number] {
   }
 
   .dialog{
-    background-color: var(--bs-body-bg);
+    background-color: $bg-dark;
   }
 
   .btn-outline-success{
@@ -207,7 +201,7 @@ input[type=number] {
 
   // profil düğmesi menüsü
   .dropstart > ul{
-    background-color: var(--bs-body-bg);
+    background-color: $bg-dark;
     color: white;
    
   }
@@ -233,11 +227,25 @@ input[type=number] {
     }
   }
 
+  .card {
+    background-color: #2d3339;
+    border: 1px solid $navy-color;
+  }
+  .card-title{
+    text-align: center;
+  }
 
+  .card-body > ul > li{
+    background-color:$bg-dark;
+    border : 1px solid $navy-color;
+    border-radius: 6px;
+  }
 }
 
  /// Light mode css'leri
 [data-bs-theme="light"]{
+
+   --bs-body-bg:#fdf6eb;
 
   .mat-mdc-table .mat-mdc-header-cell {
     color: black;
@@ -326,10 +334,34 @@ input[type=number] {
     border: 2px solid $navy-color;
     border-radius: 6px;
     padding: 0.5rem;
+    background-color: #fdf6eb;
     &:focus{
       outline: none;
       box-shadow:0 0px 2px 1px rgba(0, 0, 0, 0.8) ;
     }
   }
 
+  .mat-mdc-table .mat-mdc-header-cell{
+    background-color: $bg-light;
+    color: black;
+  }
+
+  .mat-mdc-paginator-container{
+    background-color: $bg-light;
+    color: black;
+  }
+
+  .card {
+    background-color: #347f7f;
+    border: 1px solid $navy-color;
+  }
+  .card-title{
+    text-align: center;
+  }
+
+  .card-body > ul > li{
+    background-color:$bg-light;
+    border : 1px solid $navy-color;
+    border-radius: 6px;
+  }
 }
